--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -7,9 +7,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Run tests
-        run: ./pleasew test --log_file plz-out/log/test.log -e e2e
-      - name: Run e2e test
-        run: ./pleasew test --log_file plz-out/log/e2e.log -i e2e
+        run: ./pleasew test --profile test --log_file plz-out/log/test.log
       - name: Archive logs
         if: always()
         uses: actions/upload-artifact@v2
