Inherit language defs from host

--- a/.plzconfig
+++ b/.plzconfig
@@ -16,6 +16,7 @@ name = proto
 [PluginConfig "definitions"]
 ConfigKey = LanguageDef
 Repeatable = true
+Inherit = true
 
 [PluginConfig "protoc_tool"]
 ConfigKey = ProtocTool
