--- a/build_defs/BUILD
+++ b/build_defs/BUILD
@@ -17,3 +17,9 @@ filegroup(
     srcs = ["proto.build_defs"],
     visibility = ["PUBLIC"],
 )
+
+filegroup(
+    name = "legacy",
+    srcs = ["legacy.build_defs"],
+    visibility = ["PUBLIC"],
+)
