--- a/.plzconfig
+++ b/.plzconfig
@@ -56,27 +56,27 @@ DefaultValue = protoc-gen-grpc-java
 
 [PluginConfig "python_dep"]
 Help = The Python protobuf library
-DefaultValue = //third_party/python:protobuf
+DefaultValue = @//third_party/python:protobuf
 
 [PluginConfig "java_dep"]
 Help = The Java protobuf library
-DefaultValue = //third_party/java:protobuf
+DefaultValue = @//third_party/java:protobuf
 
 [PluginConfig "go_dep"]
 Help = The Go protobuf library
-DefaultValue = //third_party/go:protobuf
+DefaultValue = @//third_party/go:protobuf
 
 [PluginConfig "python_grpc_dep"]
 Help = The Python gRPC library
-DefaultValue = //third_party/python:grpc
+DefaultValue = @//third_party/python:grpc
 
 [PluginConfig "java_grpc_dep"]
 Help = The Java gRPC library
-DefaultValue = //third_party/java:grpc-all
+DefaultValue = @//third_party/java:grpc-all
 
 [PluginConfig "go_grpc_dep"]
 Help = The Go gRPC library
-DefaultValue = //third_party/go:grpc
+DefaultValue = @//third_party/go:grpc
 
 [PluginConfig "js_dep"]
 Help = The Javascript protobuf library
