--- a/.plzconfig
+++ b/.plzconfig
@@ -6,6 +6,7 @@ language = go
 [Plugin "go"]
 Target = //plugins:go
 ImportPath = github.com/please-build/proto-rules
+GoTool = //third_party/go:toolchain|go
 
 [PluginDefinition]
 Name = proto
