--- a/.plzconfig
+++ b/.plzconfig
@@ -3,10 +3,16 @@ protoctool = //third_party/proto:protoc
 protocgoplugin = //third_party/go:protoc-gen-go
 language = go
 
+[Parse]
+PreloadSubincludes = ///python//build_defs:python
+
 [Plugin "go"]
 Target = //plugins:go
 ImportPath = github.com/please-build/proto-rules
 GoTool = //third_party/go:toolchain|go
+
+[Plugin "python"]
+Target = //plugins:python
 
 [PluginDefinition]
 Name = proto
@@ -26,9 +32,3 @@ DefaultValue = protoc
 Help = Any additional flags to pass to protoc
 Repeatable = true
 Optional = true
-
-[parse]
-preloadsubincludes = ///python//build_defs:python
-
-[Plugin "python"]
-Target = //plugins:python
